--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -31,7 +31,7 @@
         <nav class="flex justify-between items-center py-3">
             <a class="text-3xl font-bold no-underline" href="/">Occamy</a>
 
-            <img class="!m-0 rounded-full" height="70" width="70" src="/static/occamy.jpeg" alt="Magical Creature (Occamy) that can shrink down or enlarge based on the space available">
+            <img class="!m-0 rounded-full" height="70" width="70" src="/static/images/occamy.jpeg" alt="Magical Creature (Occamy) that can shrink down or enlarge based on the space available">
         </nav>
     </header>
     <main class="flex flex-col justify-center grow mb-3">
